--- a/newregister.htm
+++ b/newregister.htm
@@ -79,7 +79,7 @@
 
                 <div class="col-auto" id="titleCPF">
                     <h1>
-                        <strong>Buscar paciente por CPF</strong> 
+                        <strong>Registar um novo tratamento</strong> 
                     </h1>
                 </div>
 
