--- a/searchCPF.htm
+++ b/searchCPF.htm
@@ -35,7 +35,7 @@
             </li>
     
             <li class="nav-item">
-              <a class="nav-link" href="#">Tratamentos</a>
+              <a class="nav-link" href="newregister.htm">Tratamentos</a>
             </li>
     
             <li class="nav-item">
