--- a/newregister.htm
+++ b/newregister.htm
@@ -96,7 +96,18 @@
                         <input type="text" id="nameInsert"  class="form-control" placeholder="Digite o nome do tratamento">
                     </div>
 
-                    <!--Segunda linha da div-->
+                    <div class="row g-3">
+                        <div class="col">
+                            <h3>CPF paciente</h3>
+                          <input type="text" class="form-control" placeholder="CPF do paciente" aria-label="First name">
+                        </div>
+                        <div class="col">
+                            <h3>Nome do paciente</h3>
+                          <input type="text" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
+                        </div>
+                      </div>
+
+                    <!--
                     <div id="CPF&name">
                         <div id="CPFpaciente">
                             <h3>CPF do paciente</h3>
@@ -105,7 +116,9 @@
                         <div id="NamePaciente">
                             <h3>Nome do paciente</h3>
                         </div>
-                    </div>
+                    </div>   
+                    --->
+                    
 
                     <!--Terceira linha da div-->
                     <div id="Data&DataTermino&Fases">
