--- a/newregister.htm
+++ b/newregister.htm
@@ -107,6 +107,21 @@
                         </div>
                       </div>
 
+                    <!--Segunda linha da div-->
+                    <div class="container text-center">
+                        <div class="row">
+                          <div class="col">
+                            <h3>Data de início</h3>
+                          </div>
+                          <div class="col">
+                            <h3>Previsão de término</h3>
+                          </div>
+                          <div class="col">
+                            <h3>Fases di tratamento</h3>
+                          </div>
+                        </div>
+                      </div>
+
                     <!--
                     <div id="CPF&name">
                         <div id="CPFpaciente">
@@ -120,7 +135,7 @@
                     --->
                     
 
-                    <!--Terceira linha da div-->
+                    <!--
                     <div id="Data&DataTermino&Fases">
                         <div id="DatadeInicio">
                             <h3>Data de inicio</h3>
@@ -134,6 +149,7 @@
                             <h3>Fases do tratamento</h3>
                         </div>
                     </div>
+                    -->
 
                     <!--Quarta linha da div-->
                     <div id="Clinica&Medico">
