--- a/newregister.htm
+++ b/newregister.htm
@@ -108,20 +108,49 @@
                       </div>
 
                     <!--Segunda linha da div-->
-                    <div class="container text-center">
+                    <div class="container text-center" id="testt">
                         <div class="row">
+                            <div class="col">
+
+                                <h3 id="h3">Data de início</h3>
+
+                                <div class="md-form md-outline input-with-post-icon datepicker" id="data">
+                                    <input placeholder="Select date" type="date" id="example" class="form-control">
+                                </div>
+
+                            </div>
+
                           <div class="col">
-                            <h3>Data de início</h3>
+
+                            <h3 id="h3">Previsão de término</h3>
+
+                            <div class="md-form md-outline input-with-post-icon datepicker" id="data">
+                                <input placeholder="Select date" type="date" id="example" class="form-control">
+                            </div>
+
                           </div>
                           <div class="col">
-                            <h3>Previsão de término</h3>
-                          </div>
-                          <div class="col">
-                            <h3>Fases di tratamento</h3>
+
+                            <h3 id="h3">Fases di tratamento</h3>
+
+                            <div class="md-form md-outline input-with-post-icon datepicker" id="data">
+                                <input placeholder="" type="text" id="example" class="form-control">
+                            </div>
+
                           </div>
                         </div>
                       </div>
 
+                      <div class="row g-3">
+                        <div class="col">
+                            <h3>Clinica responsável</h3>
+                          <input type="text" class="form-control" placeholder="CPF do paciente" aria-label="First name">
+                        </div>
+                        <div class="col">
+                            <h3>Método responsável</h3>
+                          <input type="text" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
+                        </div>
+                      </div>
                     <!--
                     <div id="CPF&name">
                         <div id="CPFpaciente">
@@ -151,7 +180,7 @@
                     </div>
                     -->
 
-                    <!--Quarta linha da div-->
+                    <!--Quarta linha da div
                     <div id="Clinica&Medico">
                         <div id="Clinica">
                             <h3>Clinica responsável</h3>
@@ -161,14 +190,16 @@
                             <h3>Medico responsável</h3>
                         </div>
                     </div>
+                    -->
 
-                    <!--Quinta linha da div-->
+                    <!--Quinta linha da div
                     <div id="Upload">
                         <div id="UploadArquivo">
                             <h3>Caixa de texto e botão</h3>
                         </div>
                     </div>
-               
+                    -->
+                    
                     <!-- DIV Remédios -->
                     <div id="Remédios">
                         <div id="BorderDiv">
@@ -241,6 +272,8 @@
 
 
     </div>
+
+    <script src="script/cadastrarTratamento/"></script>
 
 
 
