--- a/newregister.htm
+++ b/newregister.htm
@@ -131,7 +131,7 @@
                           </div>
                           <div class="col">
 
-                            <h3 id="h3">Fases di tratamento</h3>
+                            <h3 id="h3">Fases de tratamento</h3>
 
                             <div class="md-form md-outline input-with-post-icon datepicker" id="data">
                                 <input placeholder="" type="text" id="example" class="form-control">
@@ -150,6 +150,12 @@
                             <h3>Método responsável</h3>
                           <input type="text" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
                         </div>
+                      </div>
+
+                      
+                      <div class="input-group">
+                        <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                        <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
                       </div>
                     <!--
                     <div id="CPF&name">
@@ -199,7 +205,7 @@
                         </div>
                     </div>
                     -->
-                    
+
                     <!-- DIV Remédios -->
                     <div id="Remédios">
                         <div id="BorderDiv">
