--- a/newregister.htm
+++ b/newregister.htm
@@ -157,6 +157,53 @@
                         <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
                         <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
                       </div>
+
+                      <!--Remedios-->
+
+                      <div>
+                          <h3>Remédios</h3>
+                      </div>  
+
+                      <div class="row g-3">
+                        <div class="col">
+                          <input type="text" class="form-control" placeholder="First name" aria-label="First name" id="textPrimary">
+                        </div>
+                        <div class="col">
+                          <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="textSecondary">
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="textSecondary">
+                          </div>
+                        <div class="d-grid gap-2 d-md-block">
+                            <button class="btn btn-primary" type="button">Button</button>
+                        </div>
+                      </div>
+
+                      <!--Outra parte-->
+
+                      <div class="row g-3">
+                        <div class="col">
+                          <input type="text" class="form-control" placeholder="First name" aria-label="First name" id="textPrimary">
+                        </div>
+                        <div class="col">
+                          <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="textSecondary">
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="textSecondary">
+                          </div>
+                          <div class="d-grid gap-2 d-md-block">
+                            <button class="btn btn-primary" type="button">Button</button>
+                          </div>
+                      </div>
+
+                      <!--Remedios-->
+
+
+
+
+
+
+
                     <!--
                     <div id="CPF&name">
                         <div id="CPFpaciente">
