Todos os inputs add

--- a/newregister.htm
+++ b/newregister.htm
@@ -165,38 +165,48 @@
                       </div>  
 
                       <div class="row g-3">
-                        <div class="col">
+                        <div class="col" id="class1">
                           <input type="text" class="form-control" placeholder="First name" aria-label="First name" id="textPrimary">
                         </div>
-                        <div class="col">
+                        <div class="col" id="class2">
                           <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="textSecondary">
                         </div>
-                        <div class="col">
+                        <div class="col" id="class2">
                             <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="textSecondary">
                           </div>
-                        <div class="d-grid gap-2 d-md-block">
-                            <button class="btn btn-primary" type="button">Button</button>
+                        <div class="d-grid gap-2 d-md-block" id="classButton">
+                            <button class="btn btn-primary" type="button" id="buttonPlus"> + </button>
                         </div>
                       </div>
 
                       <!--Outra parte-->
 
                       <div class="row g-3">
-                        <div class="col">
+                        <div class="col" id="class1">
                           <input type="text" class="form-control" placeholder="First name" aria-label="First name" id="textPrimary">
                         </div>
-                        <div class="col">
+                        <div class="col" id="class2">
                           <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="textSecondary">
                         </div>
-                        <div class="col">
+                        <div class="col" id="class2">
                             <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="textSecondary">
                           </div>
-                          <div class="d-grid gap-2 d-md-block">
-                            <button class="btn btn-primary" type="button">Button</button>
+                          <div class="d-grid gap-2 d-md-block" id="classButton">
+                            <button type="button" class="btn btn-danger" id="buttonPlus"> - </button>
                           </div>
                       </div>
 
                       <!--Remedios-->
+
+                      <!--Class botão-->
+
+                      <div class="d-grid gap-2">
+                        <div class="container">
+                            <button class="btn btn-primary" type="button" id="buttonGiant">Button</button>
+                        </div>
+                      </div>
+
+                      <!--Class botão-->
 
 
 
@@ -253,7 +263,7 @@
                     </div>
                     -->
 
-                    <!-- DIV Remédios -->
+                    <!-- DIV Remédios 
                     <div id="Remédios">
                         <div id="BorderDiv">
                             <div id="Remedio">
@@ -293,14 +303,15 @@
                             </div>
                         </div>
                     </div>
+                    -->
 
-                    <!-- DIV Button Castrar -->
+                    <!-- DIV Button Castrar
                     <div id="Cadastrar">
                         <div id="ButtonCadastrar">
                             <h3>Botão cadastrar</h3>
                         </div>
                     </div>
-                
+                    -->
 
 
                     <div id="iconDiv" class="col-auto">
