Arrumar os inputs

--- a/newregister.htm
+++ b/newregister.htm
@@ -88,13 +88,14 @@
             
             <div id="divBusca">
 
-                <div class="row g-3" id="cpfDiv">
+                <div class="row g-3" id="cpfDiv">                     <!--DIV PRINCIPAL-->
 
                     <!--Primeira linha da div-->
                     <div id="nameInput" class="col-auto">
                         <h3>Nome do tratamento</h3>
                         <input type="text" id="nameInsert"  class="form-control" placeholder="Digite o nome do tratamento">
                     </div>
+                    <!--Primeira linha da div-->
 
                     <div class="row g-3">
                         <div class="col">
