--- a/newregister.htm
+++ b/newregister.htm
@@ -100,11 +100,11 @@
                     <div class="row g-3">
                         <div class="col">
                             <h3>CPF paciente</h3>
-                          <input type="text" class="form-control" placeholder="CPF do paciente" aria-label="First name">
+                          <input type="text" id="nameInsert" class="form-control" placeholder="CPF do paciente" aria-label="First name">
                         </div>
                         <div class="col">
                             <h3>Nome do paciente</h3>
-                          <input type="text" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
+                          <input type="text" id="nameInsert" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
                         </div>
                       </div>
 
@@ -145,11 +145,11 @@
                       <div class="row g-3">
                         <div class="col">
                             <h3>Clinica responsável</h3>
-                          <input type="text" class="form-control" placeholder="CPF do paciente" aria-label="First name">
+                          <input type="text" id="nameInsert" class="form-control" placeholder="CPF do paciente" aria-label="First name">
                         </div>
                         <div class="col">
                             <h3>Método responsável</h3>
-                          <input type="text" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
+                          <input type="text" id="nameInsert" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
                         </div>
                       </div>
 
