Add border remedios

--- a/newregister.htm
+++ b/newregister.htm
@@ -165,7 +165,7 @@
                           <h3>Remédios</h3>
                       </div>  
 
-                      <div class="container"> <!--div center-->
+                      <div class="container" id="borderRemedios"> <!--div center-->
 
                         <div id="divRemedios">
 
