--- a/newregister.htm
+++ b/newregister.htm
@@ -92,18 +92,18 @@
 
                     <!--Primeira linha da div-->
                     <div id="nameInput" class="col-auto">
-                        <h3>Nome do tratamento</h3>
+                        <h3 id="h3">Nome do tratamento</h3>
                         <input type="text" id="nameInsert"  class="form-control" placeholder="Digite o nome do tratamento">
                     </div>
                     <!--Primeira linha da div-->
 
                     <div class="row g-3">
                         <div class="col">
-                            <h3>CPF paciente</h3>
+                            <h3 id="h3">CPF paciente</h3>
                           <input type="text" id="nameInsert" class="form-control" placeholder="CPF do paciente" aria-label="First name">
                         </div>
                         <div class="col">
-                            <h3>Nome do paciente</h3>
+                            <h3 id="h3">Nome do paciente</h3>
                           <input type="text" id="nameInsert" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
                         </div>
                       </div>
@@ -144,11 +144,11 @@
 
                       <div class="row g-3">
                         <div class="col">
-                            <h3>Clinica responsável</h3>
+                            <h3 id="h3">Clinica responsável</h3>
                           <input type="text" id="nameInsert" class="form-control" placeholder="CPF do paciente" aria-label="First name">
                         </div>
                         <div class="col">
-                            <h3>Método responsável</h3>
+                            <h3 id="h3">Método responsável</h3>
                           <input type="text" id="nameInsert" class="form-control" placeholder="Nome do paciente" aria-label="Last name">
                         </div>
                       </div>
@@ -162,7 +162,7 @@
                       <!--Remedios-->
 
                       <div>
-                          <h3>Remédios</h3>
+                          <h3 id="h3">Remédios</h3>
                       </div>  
 
                       <div class="container" id="borderRemedios"> <!--div center-->
