--- a/newregister.htm
+++ b/newregister.htm
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style/newregister.css">
     <link rel="stylesheet" href="style/styleNavBar.css">
     
-    <title>Registar novo tratamento</title>
+    <!--<title>Registar novo tratamento</title>-->
 
 </head>
 <body>
