--- a/searchCPF.htm
+++ b/searchCPF.htm
@@ -90,8 +90,10 @@
 
                 <div class="row g-3" id="cpfDiv">
                     
+
+                    
                     <div id="cpfInput" class="col-auto">
-                        <input type="text" id="cpfInsert"  class="form-control" placeholder="Insira o CPF do paciente que você deseja encontrar...">
+                        <input type="text" id="cpfInsert" maxlength="14" class="form-control" placeholder="Insira o CPF do paciente que você deseja encontrar...">
                     </div>
 
                     <div id="iconDiv" class="col-auto">
@@ -116,6 +118,7 @@
     </div>
 
 
+    <script src="./script/main.js"></script>
 
 </body>
 </html>
