--- a/searchCPF.htm
+++ b/searchCPF.htm
@@ -93,7 +93,8 @@
 
                     
                     <div id="cpfInput" class="col-auto">
-                        <input type="text" id="cpfInsert" maxlength="14" class="form-control" placeholder="Insira o CPF do paciente que você deseja encontrar...">
+                        <!--style="text-transform: lowercase"       |     COLOCAR ISSO PARA FINAR MINUSCULO-->
+                        <input style="text-transform: lowercase" type="text" id="cpfInsert" maxlength="14" class="form-control" placeholder="Insira o CPF do paciente que você deseja encontrar...">
                     </div>
 
                     <div id="iconDiv" class="col-auto">
@@ -118,7 +119,7 @@
     </div>
 
 
-    <script src="./script/main.js"></script>
+    
 
 </body>
 </html>
